pipeline/kubernetes/opendesk-web-ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kanwalnainsingh
  name: opendesk-web-ui
  labels:
    app: opendesk-web-ui
spec:
  restartPolicy: Never
  volumes:
    - name: shared-data
      emptyDir: {}

  containers:
    - name: opendesk-web-ui-container
      ports:
      - containerPort: 3000
      image: kanwalnainsingh/opendesk-web-ui:latest
      args: ["npm","start"]
      volumeMounts:
        - name: shared-data
          mountPath: /tmp
