pipeline/kubernetes/desk-service-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: desk-service
  name: desk-service-expose
  namespace: default
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: desk-service
  type: ClusterIP
