pipeline/kubernetes/opendesk-web-ui-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opendesk-web-ui
  name: opendesk-web-ui-expose
  namespace: kanwalnainsingh
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: opendesk-web-ui
  type: ClusterIP
