pipeline/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kanwalnainsingh
  name: opendesk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/booking/
            backend:
              serviceName: booking
              servicePort: 8081
          - path: /
            backend:
              serviceName: opendesk-web-ui
              servicePort: 80
